Implement CI report PDF generation
test with small change

add sudo

add another test change

don't install the full 5GB texlive

add another test change

change up some output dirs

try adding a push commit and push action

add another test change

fix indentation error

add another test change

try editing typo

add another test change

try adding permissions

add another test

Generated new PDF

Signed-off-by: Generate PDF Github Action <prouv@users.noreply.github.com>

try changing to output dir to build

add another test change

fix working dir

add another test change

fix small error

add another test change

fix small error

add another test change

print the dir content

add another test change

try to fix output dir issues

add another test change

Generated new PDF

Signed-off-by: Generate PDF Github Action <prouv@users.noreply.github.com>

try just ammending the commit

no custom committer

typo

add another test change

fix typo

add another test change

add another test change

try to fix annoying issue with being behind the remote

add another test change

try to pull

add another test change

give up on changing history

add another test change

Commit from GitHub Actions (Generate Report PDF)

Signed-off-by: Minitwit Github Action <prouv@users.noreply.github.com>

test include

Commit from GitHub Actions (Generate Report PDF)

Signed-off-by: Minitwit Github Action <prouv@users.noreply.github.com>

delete trash folder

only generate pdf's on main

--- a/report/main.tex
+++ b/report/main.tex
@@ -18,24 +18,21 @@
 \date{May 2024}
 
 \begin{document}
-	\maketitle
-    \tableofcontents
-    \listoffigures
-	
+\maketitle
+\tableofcontents
+\listoffigures
 
 
 
+\input{sections/intro.tex}
 
 
-    \chapter{architectue overview}
-    \section{Overview 1}
-    
 
-    
+\chapter{architectue overview}
 
-    %\appendix
-    %\chapter{Appendix?}
-    %\paragraph{} Something here?
+%\appendix
+%\chapter{Appendix?}
+%\paragraph{} Something here?
 \end{document}
 
 
