--- a/report/main.tex
+++ b/report/main.tex
@@ -27,6 +27,8 @@
 \input{sections/intro.tex}
 
 \input{sections/system_perspective/dependencies.tex}
+\input{sections/process_perspective/logging.tex}
+\input{sections/process_perspective/monitoring.tex}
 
 
 \chapter{architectue overview}
