--- a/report/sections/system_perspective/dependencies.tex
+++ b/report/sections/system_perspective/dependencies.tex
@@ -1,4 +1,5 @@
-
+% !TeX encoding = UTF-8
+% !TeX spellcheck = en_GB
 \section{Systems dependencies}
 
 The list below, is the technolgies we are using in our application, group into categories of technogy. 
@@ -41,11 +42,5 @@ The list below, is the technolgies we are using in our application, group into c
     \item Playwright: UI testing 
     \item Cypress: End-2-end testing
     \item Xunit: For Basic Unit testing
-\end{itemize}
-
-
-\subsection*{Security}
-\begin{itemize}
-    \item Skipfish: for Vulnerabilities
 \end{itemize}
 
