Add more section files

--- a/report/main.tex
+++ b/report/main.tex
@@ -29,10 +29,12 @@
 
 \chapter{System Perspective}
 \input{sections/system_perspective/intro.tex}
+\input{sections/system_perspective/design_architecture.tex}
 \input{sections/system_perspective/dependencies.tex}
 
 \chapter{Process Perspective}
 \input{sections/process_perspective/intro.tex}
+\input{sections/process_perspective/ci.tex}
 \input{sections/process_perspective/monitoring.tex}
 \input{sections/process_perspective/logging.tex}
 \input{sections/process_perspective/security.tex}
