Added system interactions sequence diagrams

--- a/report/main.tex
+++ b/report/main.tex
@@ -31,6 +31,7 @@
 \input{sections/system_perspective/intro.tex}
 \input{sections/system_perspective/design_architecture.tex}
 \input{sections/system_perspective/dependencies.tex}
+\input{sections/system_perspective/interactions.tex}
 
 \chapter{Process Perspective}
 \input{sections/process_perspective/intro.tex}
