Added choice of technology

--- a/report/sections/system_perspective/intro.tex
+++ b/report/sections/system_perspective/intro.tex
@@ -1,3 +1,18 @@
 % !TeX encoding = UTF-8
 % !TeX spellcheck = en_GB
+
+\section{Choice of technology}
+
+\subsection{Choice of web framwork}
+In our project, we have choosen to work with Microsoft open source web framework .Net, with another opensource database namely Postgres database. Our reason for chosen .Net, was several reason, firs it opensource, so it is very cheap to have in production. Second Microsoft continue to development and main .Net web solution, third it has a huge communicity/documentation, so it easy to get help with any issue. Third it does a lot of work for the developer, so develop a web application in this, is very easy and straight forward. Fourth, .Net use \texttt{C\#} as a language, \texttt{C\#} is general known to be a relative fast and relable langauge which also motivate our choice of choosing Microsoft .Net solution. Lastly Many Medium size/big companies in Denmark are using \texttt{C\#} and .Net technology for their solutions, by using .Net in our project, have given us experience we can use when we graduate. 
+
+
+\subsection{Arguments for the choice of virtualization techniques and deployment targets??!!}
+PIRO :D 
+
+\subsection{CD/CI reason}
+Since we use github for storing our source code, we choose to choice github for CD/CI tool, since these two work very well together. 
+
+
+
 \paragraph{}  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur nunc non tempor pulvinar. Quisque congue orci non porta feugiat. Morbi vitae nulla libero. Nulla a sem diam. Pellentesque ullamcorper, est sed posuere eleifend, ante elit imperdiet lorem, ac scelerisque lacus ante id ipsum. Vestibulum ac metus tempor sem mattis ornare at eget massa. Sed ut aliquam lorem. 
