Working on system current state

--- a/report/main.tex
+++ b/report/main.tex
@@ -32,6 +32,7 @@
 \input{sections/system_perspective/design_architecture.tex}
 \input{sections/system_perspective/dependencies.tex}
 \input{sections/system_perspective/interactions.tex}
+\input{sections/system_perspective/currentstate.tex}
 
 \chapter{Process Perspective}
 \input{sections/process_perspective/intro.tex}
