--- a/report/sections/process_perspective/ai.tex
+++ b/report/sections/process_perspective/ai.tex
@@ -1,10 +1,14 @@
 % !TeX encoding = UTF-8
 % !TeX spellcheck = en_GB
 \section{AI-Systems used during the project}
-\subsection{Reflection on ChatGPT}
-\paragraph{} People would assume that using AI like ChatGPT would make developing software much easier and faster, which we think is only partially true. 
-A positive aspect of using ChatGPT is for example it assists very well when learning a new programming language. It is much faster to learn the right syntax by asking ChatGPT rather than googling. It is also very good at explaining code, which makes it easier to understand what other people did. Another positive use is for fixing simple errors by just copying the code with the error message. Usually it resolves the mistake pretty good which also safes some time then.\
+\paragraph{} During the project we have used the AI systems ChatGPT and GitHub Copilot. We have used them mainly to help in debugging, to fix simple errors, like f.i. syntax errors, or to perform menial tasks such as translating from one language to another. This is due to the fact that these AI-assistants do not seem to work very well with bigger tasks, as they lack the view of the "big picture".
 
-\paragraph{} The problem is when there are more complex errors, especially when it is between two or more systems. ChatGPT makes a first guess and then tends to try to find solutions within the area of the first suggestion. This on the other hand can lead to lose a lot of time because the fix of the problem lies somewhere completely else. An example for this was the implementation of our e2e tests with Cypress. When mounting the docker for cypress we had an error that it could not find the test files, which were in the correct directory. ChatGPT suggested that the volume mounting was wrong and kept suggesting to fix this issue within our compose file. However after some quick research on stackoverflow it was clear that the naming of the test files were wrong, which then could be fixed pretty quick.
+\subsection{Reflection on the use of AI assistants}
+\paragraph{} People would assume that using AI assistants like ChatGPT or GitHub Copilot would make developing software much easier and faster, which we think is only partially true. 
+A positive aspect of using these assistants is for example they assist very well when learning a new programming language. It is much faster to learn the right syntax by asking ChatGPT rather than googling. It is also very good at explaining code, which makes it easier to understand what other people did. Another positive use is for fixing simple errors by just copying the code with the error message. Usually they resolve the mistake pretty good which also saves some time.
 
-\paragraph{} As a conclusion, the use of ai-systems can safe time and make development efficient, if used in the right places. When ChatGPT doesn't give the correct answer within the first tries it is a good advice to stop using it and try to resolve the issue by your self. 
+\paragraph{} The problem is when there are more complex errors, especially when they are between two or more systems. They tend makes a first guess and then try to find solutions within the area of the first suggestion, which can lead to losing a lot of time because the fix of the problem lies somewhere else completely. An example for this happened when we were implementing our E2E tests with Cypress. When mounting the docker for Cypress we had an error saying that it could not find the test files, which were in the correct directory. ChatGPT suggested that the volume mounting was wrong and kept suggesting fixing this issue within our compose file. However after some quick research on Stack Overflow it became clear that the naming of the test files were wrong, which then we were able to fix quite quickly. 
+
+\paragraph{} In cases where the error stems from the interaction between several systems, it is also not very helpful to ask AI assistants, as they only see the system you are working currently one, which does not allow them to provide good answers. One can, of course, try to explain them how the systems interact with each other, but this can be quite consuming, and usually it also does not result with the AI assistants providing a satisfactory answer.
+
+\paragraph{} As a conclusion, the use of AI-systems can save time and make development efficient, if used in the right places. When ChatGPT or other AI assistants do not give the correct answer within the first tries it is good advice to stop using it and try to resolve the issue by yourself. 
