Initial decision log for monitoring

--- a/report/sections/process_perspective/monitoring.tex
+++ b/report/sections/process_perspective/monitoring.tex
@@ -2,7 +2,10 @@
 % !TeX spellcheck = en_GB
 \section{Monitoring}
 \subsection{Prometheus}
+
 \subsubsection{Decision Log}
+\paragraph{} Prometheus is a powerful and widely used open-source tool for systems monitoring. We chose this tool for its open-souce nature, ease of use, powerful query language and simple interoperability with Grafana. Prometheus was used as a docker container running on our VMs and it was used for quering monitoring data about our running .NET minitwit application
+\paragraph{} Setting up Prometheus really was as easy as just getting a docker image of it running. All the data source configuring was done through Grafana, including all visualization of the data itself.
 
 \subsection{Grafana}
 \subsubsection{Decision Log}
