add top-level module view

--- a/report/sections/system_perspective/design_architecture.tex
+++ b/report/sections/system_perspective/design_architecture.tex
@@ -7,7 +7,7 @@ However, all the auxilliary components, such as monitoring, logging etc. are dep
 
 \begin{figure}
   \begin{center}
-    \includegraphics[width=0.35\textwidth]{img/deployment.pdf}
+    \includegraphics[width=0.50\textwidth]{img/deployment.pdf}
   \end{center}
   \caption{Deployment view of our system.}\label{fig:deployment}
 \end{figure}
@@ -24,7 +24,12 @@ The monolithic app is implemented as a ASP.NET MVC web server. It is delegated i
 
 Both areas use the same object-relational mapping and data abstraction. As such, they are simply two different ways to interface with our system.
 
- 
+\begin{figure}
+  \begin{center}
+    \includegraphics[width=0.50\textwidth]{img/module1.pdf}
+  \end{center}
+  \caption{Module view of the top-level modules of the app.}\label{fig:module1}
+\end{figure}
 
 
 
