--- a/report/sections/system_perspective/intro.tex
+++ b/report/sections/system_perspective/intro.tex
@@ -13,6 +13,7 @@ PIRO :D
 \subsection{CD/CI reason}
 Since we use github for storing our source code, we choose to choice github for CD/CI tool, since these two work very well together. 
 
-
-
-\paragraph{}  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur nunc non tempor pulvinar. Quisque congue orci non porta feugiat. Morbi vitae nulla libero. Nulla a sem diam. Pellentesque ullamcorper, est sed posuere eleifend, ante elit imperdiet lorem, ac scelerisque lacus ante id ipsum. Vestibulum ac metus tempor sem mattis ornare at eget massa. Sed ut aliquam lorem. 
+\input{sections/system_perspective/design_architecture.tex}
+\input{sections/system_perspective/dependencies.tex}
+\input{sections/system_perspective/interactions.tex}
+\input{sections/system_perspective/currentstate.tex}
