add description of scaling and update strategy

--- a/report/main.tex
+++ b/report/main.tex
@@ -12,6 +12,7 @@
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage[hidelinks]{hyperref}
+\usepackage{listings}
 
 \graphicspath{ {./img/} }
 
@@ -37,6 +38,7 @@
 \input{sections/process_perspective/logging.tex}
 \input{sections/process_perspective/security.tex}
 \input{sections/process_perspective/ai.tex}
+\input{sections/process_perspective/scaling.tex}
 
 \chapter{Lessons Learned}
 \input{sections/lessons_learned/intro.tex}
