--- a/report/main.tex
+++ b/report/main.tex
@@ -25,7 +25,7 @@
 \tableofcontents
 \listoffigures
 
-\chapter{Introduction}
+% \chapter{Introduction}
 \input{sections/intro.tex}
 
 \chapter{System Perspective}
