improve the tech choice text a bit

--- a/report/sections/system_perspective/intro.tex
+++ b/report/sections/system_perspective/intro.tex
@@ -1,17 +1,26 @@
 % !TeX encoding = UTF-8
 % !TeX spellcheck = en_GB
 
-\section{Choice of technology}
+\section{Technology Choices}
 
-\subsection{Choice of web framwork}
-In our project, we have choosen to work with Microsoft open source web framework .Net, with another opensource database namely Postgres database. Our reason for chosen .Net, was several reason, firs it opensource, so it is very cheap to have in production. Second Microsoft continue to development and main .Net web solution, third it has a huge communicity/documentation, so it easy to get help with any issue. Third it does a lot of work for the developer, so develop a web application in this, is very easy and straight forward. Fourth, .Net use \texttt{C\#} as a language, \texttt{C\#} is general known to be a relative fast and relable langauge which also motivate our choice of choosing Microsoft .Net solution. Lastly Many Medium size/big companies in Denmark are using \texttt{C\#} and .Net technology for their solutions, by using .Net in our project, have given us experience we can use when we graduate. 
+\subsection{Choice of Web framwork}
+In our project, we have choosen to work with \textit{.NET}, the Microsoft open source web framework, in conjunction with Postgres, an open source database.
+The choice of .NET is based on several factors:
+
+\begin{enumerate}
+	\item It has the backing of Microsoft, a very large organisation, which dedicates significant resources to developing and maintaing the framework.
+	\item Besides Microsoft, the .NET-framework has a large userbase and community, which improves the probability that any issues we encounter are addresses by other users in various software delopment forums.
+	\item Microsoft provides an expansive set of templates and sample implementations for common usecases, which means that initialising a new web application is very easy and straight forward.
+	\item The main programming language of .NET, \textit{C\#} is very mature and performant. %known to be a relative fast and relable langauge which also motivate our choice of choosing Microsoft .Net solution.
+	\item Lastly, the .NET framework and C\# are popular amongst software companies in Denmark, so by choosing these technologies, we learn skills that are in need in the industry.
+\end{enumerate}
 
 
 \subsection{Arguments for the choice of virtualization techniques and deployment targets??!!}
-PIRO :D 
+PIRO :D
 
 \subsection{CD/CI reason}
-Since we use github for storing our source code, we choose to choice github for CD/CI tool, since these two work very well together. 
+Since we use github for storing our source code, we choose to choice github for CD/CI tool, since these two work very well together.
 
 \input{sections/system_perspective/design_architecture.tex}
 \input{sections/system_perspective/dependencies.tex}
