--- a/report/sections/system_perspective/intro.tex
+++ b/report/sections/system_perspective/intro.tex
@@ -16,8 +16,19 @@ The choice of .NET is based on several factors:
 \end{enumerate}
 
 
-\subsection{Arguments for the choice of virtualization techniques and deployment targets??!!}
-PIRO :D
+\subsection{Virtualization Techniques and Deployment Targets}
+
+We elected not to use a dedicated virtualization solution, as we did not find them to provide enough benefit for the time it would take to setup. Since we are already using Docker, we assessed that achieving further encapsulation of the environment was not a teneable investment.
+
+Using Docker seemed like a very obvious choice: We avoid problems with incompatible developer machines, and it is also very easy to deploy docker images to our VM's. Furthermore, the choice of Dokcer paid dividends later in the project, as it allowed us to use the same Docker Compose configuration for deploying a Docker Swarm (see section \ref{sec:scaling} on page \pageref{sec:scaling}).
+
+Instead, we developed and evolved a custom provisioning script, which started as a C\# program, but ended up as a Python script.
+The initial choice of C\# was based on the fact that we were using Azure as our deployment target, and Microsoft provided an Azure library for C\# that we found to be effective.
+
+However, we quickly ran out of student credits on our Azure account after we began using the managed database offering on Azure, which resulted in our migration to Digital Ocean.
+We decided to continue using a custom provisioning script, but for Digital Ocean, we found the Digital Ocean Python binding package \texttt{pydo}\footnote{See \url{https://pypi.org/project/pydo/} (accessed on the 20th of May, 2024)} to be the most well-documented, as the offical Digital Ocean API documentation\footnote{See \url{https://docs.digitalocean.com/reference/} (accessed on the 20th of May, 2024)}.
+Also, the script-like nature of the Python language is more appropiate for the task of provisioning.
+
 
 \subsection{CD/CI reason}
 Since we use github for storing our source code, we choose to choice github for CD/CI tool, since these two work very well together.
