--- a/report/main.tex
+++ b/report/main.tex
@@ -25,7 +25,7 @@
 \tableofcontents
 \listoffigures
 
-% \chapter{Introduction}
+\pagebreak
 \input{sections/intro.tex}
 
 \chapter{System Perspective}
