--- a/report/main.tex
+++ b/report/main.tex
@@ -17,7 +17,7 @@
 \graphicspath{ {./img/} }
 
 \title{DevOps Report}
-\author{Group F \\ (insert names)}
+\author{Group F \\ nicje, mlsc, dmon, gelu, piro}
 \date{May 2024}
 
 \begin{document}
