--- a/report/sections/process_perspective/monitoring.tex
+++ b/report/sections/process_perspective/monitoring.tex
@@ -18,7 +18,7 @@
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=1\textwidth]{Monitoring2.png}
-	\caption{Diagram describing our implementation of fluentd}
+	\caption{Diagram describing our monitoring implementation}
 	\label{fig:Monitoring2}
 \end{figure}
 
