attempt at fixing figure placements

--- a/report/sections/system_perspective/interactions.tex
+++ b/report/sections/system_perspective/interactions.tex
@@ -4,7 +4,7 @@ This section the interations flow of request for the system, by user create a ne
 
 
 
-\begin{figure}[h]
+\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.75\textwidth]{register_sequence.png}
 	\caption{Sequence diagram demostrate the flow of registerings of a user}
@@ -12,21 +12,21 @@ This section the interations flow of request for the system, by user create a ne
 \end{figure}
 
 
-\begin{figure}[h]
+\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.75\textwidth]{login_sequence.png}
 	\caption{Sequence diagram demostrate the login procedure for a user}
 	\label{fig:login_sequence}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.75\textwidth]{twit_sequence.png}
 	\caption{Sequence diagram demostrate the procedure for create a new twit}
 	\label{fig:twit_sequence}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.75\textwidth]{follow_sequence.png}
 	\caption{Sequence diagram of the procedure for a user follow another user}
