fix figure placement issue

--- a/report/sections/process_perspective/ci.tex
+++ b/report/sections/process_perspective/ci.tex
@@ -22,14 +22,14 @@ During the execution of the pipeline we need to use some secrets, f.e. to SSH in
 
 \paragraph{} In figures \ref{fig:ci-push} and \ref{fig:ci-pr} the flow of the different steps can be seen, both in the case of a PR-triggered pipeline and in the case of a pipeline triggered by a push to main.
 
-\begin{figure}[h]
+\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.75\textwidth]{ci-push.png}
 	\caption{Diagram with the different steps executed by the pipeline on a push to main.}
 	\label{fig:ci-push}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.75\textwidth]{ci-pr.png}
 	\caption{Diagram with the different steps executed by the pipeline when a PR is opened or updated.}
