--- a/report/sections/process_perspective/logging.tex
+++ b/report/sections/process_perspective/logging.tex
@@ -17,7 +17,7 @@
 
 \subsubsection{Implementation of fluentd}
 \paragraph{} A diagram describing our use and implementation of fluentd can be seen in figure \ref{fig:logging2}.
-\begin{figure}[h]
+\begin{figure}[H]
 	\centering
 	\includegraphics[width=1\textwidth]{Logging2.png}
 	\caption{Diagram describing our implementation of fluentd}
