--- a/report/sections/system_perspective/currentstate.tex
+++ b/report/sections/system_perspective/currentstate.tex
@@ -4,7 +4,7 @@ We have use Sonarqube and codeclimate to analyze our code base. This section wil
 
 \subsection*{Codeclimate}
 
-\begin{figure}[h]
+\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.75\textwidth]{codeclitemate.png}
 	\caption{Code climate report}
@@ -15,7 +15,7 @@ Codeclimate general reports 323 code smells, and 261 duplication. Mostly of thes
 
 \subsection*{Sonarqube}
 Sunarqube report several issues. Mostly it report security issues, because we are logging to much in our application, which could cause security issues. 
-\begin{figure}[h]
+\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.75\textwidth]{sonarqube.png}
 	\caption{Sonarqube report}
